feat(home): add CameraScreen

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 
+camerak = "0.0.9"
 kgl = "0.6.3"
 kotlin = "2.1.10"
 compose = "1.7.1"
@@ -26,6 +27,8 @@ kotlinWrappersBom = "2025.2.5"
 androidx-activityCompose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
 androidx-uitest-testManifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "androidx-uiTest" }
 androidx-uitest-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "androidx-uiTest" }
+
+camerak = { module = "io.github.kashif-mehmood-km:camerak", version.ref = "camerak" }
 kermit = { module = "co.touchlab:kermit", version.ref = "kermit" }
 
 # KGL
